# MySound_AndroidStudio

./: README.md
MySound/app/: CMakeLists.txt  build.gradle
MySound/app/src/androidTest/java/com/zkr/mysound/: ExampleInstrumentedTest.java
MySound/app/src/main/: AndroidManifest.xml
MySound/app/src/main/cpp/: com_zkr_mysound_Utils.h  supersound.cpp
MySound/app/src/main/java/com/zkr/mysound/: MainActivity.java  Utils.java
MySound/app/src/main/res/layout/: activity_main.xml  content_main.xml
MySound/app/src/main/res/menu/: menu_main.xml
MySound/app/src/main/res/values/: strings.xml  styles.xml
MySound/app/src/test/java/com/zkr/mysound/: ExampleUnitTest.java
MySound/gradle/wrapper/: gradle-wrapper.properties
